--- a/package.json
+++ b/package.json
@@ -55,5 +55,7 @@
     "@types/react-dom": "^18.3.1",
     "@types/swiper": "^6.0.0",
     "typescript": "^4.9.5"
-  }
+  },
+  "proxy": "http://localhost:5000"
+  
 }
