[fixbug] 좋아요 하트변경 유저판별수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "target": "es2016",
+    "lib": ["esnext", "dom"], 
+    "skipLibCheck": true,
     "module": "commonjs",
     "jsx": "react-jsx", 
     "esModuleInterop": true,
